# Cortex-RAG

./: .env.example  .gitignore  ARQUITECTURA.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 098482a100da_knowledge_ingestion_foundation.py  9555bfdd5c43_conversations_and_messages.py  b7f2c9a4d1e8_document_versioning.py  c3d9e1f42a76_typed_metadata_and_source_type.py  d4e8f1a29b30_processing_job_pipeline.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  errors.py
app/api/v1/routers/: __init__.py  api.py  chat.py  documents.py  health.py  processing_jobs.py  search.py
app/api/v1/schemas/: __init__.py  chat.py  common.py  document.py  search.py
app/application/: __init__.py
app/application/chat/: dtos.py
app/application/chat/use_cases/: __init__.py  answer_question.py
app/application/conversations/: __init__.py
app/application/conversations/use_cases/: __init__.py
app/application/documents/: __init__.py  dtos.py  validation.py
app/application/documents/use_cases/: __init__.py  add_document_version.py  delete_document.py  get_document.py  list_document_versions.py  list_documents.py  process_document.py  update_document_metadata.py  upload_document.py
app/application/processing/: __init__.py  dtos.py
app/application/processing/use_cases/: __init__.py  create_processing_job.py  get_processing_job.py  list_processing_jobs.py
app/application/search/: __init__.py  dtos.py
app/application/search/use_cases/: semantic_search.py
app/config/: __init__.py  settings.py
app/domain/: __init__.py
app/domain/chunking/: __init__.py  entities.py  services.py
app/domain/conversations/: __init__.py  entities.py  repositories.py
app/domain/documents/: __init__.py  collections.py  entities.py  events.py  job_queue.py  jobs.py  metadata.py  repositories.py  source_type.py  storage_policy.py  value_objects.py
app/domain/embeddings/: __init__.py  entities.py  providers.py
app/domain/llm/: __init__.py  entities.py  providers.py
app/domain/parsers/: __init__.py  entities.py  providers.py
app/domain/shared/: __init__.py  event_publisher.py  events.py  exceptions.py
app/domain/vector_store/: __init__.py  entities.py  repositories.py
app/infrastructure/: __init__.py
app/infrastructure/chunking/: __init__.py  recursive_chunker.py
app/infrastructure/embeddings/: fastembed_provider.py  ollama_provider.py
app/infrastructure/events/: __init__.py  logging_publisher.py
app/infrastructure/llm/: gemini_provider.py  ollama_provider.py
app/infrastructure/parsers/: __init__.py  pymupdf_parser.py
app/infrastructure/persistence/sqlalchemy/: __init__.py  base.py  models.py  session.py
app/infrastructure/persistence/sqlalchemy/repositories/: conversation_repository.py  document_repository.py  processing_job_repository.py
app/infrastructure/queue/: rabbitmq_job_queue.py
app/infrastructure/vector_store/: qdrant_repository.py
app/shared/: constants.py  hashing.py  logging.py  pagination.py  parsing.py
app/workers/: __init__.py  base.py  composition.py  dispatcher.py  executor.py  ingestion.py  registry.py
docker/: Dockerfile  entrypoint.sh
scripts/: run_worker.py  seed.py
tests/: builders.py  conftest.py  factories.py  fakes.py
tests/integration/: conftest.py  test_create_processing_job.py  test_document_repository.py  test_document_use_cases.py  test_document_versioning.py  test_documents_api.py  test_processing_api.py  test_processing_job_repository.py  test_worker_pipeline.py
tests/unit/: test_app_starts.py  test_chat_search.py  test_local_storage.py  test_metadata.py  test_processing_job.py  test_settings.py
web/: index.html
